# text-converters

./: .gitignore  CLAUDE.md  DISCLAIMER.md  LICENSE  PUBLISH_TO_GITHUB.md  README.md  __init__.py  character_converters.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
tests/: test_character_converters.py
text_converters/: __init__.py  character_converters.py
